[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/main_vial.svg" type="Texture" id=1]
[ext_resource path="res://scripts/2D/MainVial.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 126.906, 172.515 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 184, 228 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 20 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.432836, 1 )
colors = PoolColorArray( 1, 1, 1, 0.745304, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 200, 250, 0 )
flag_disable_z = true
gravity = Vector3( 0, -10, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
color = Color( 0, 1, 0.0862745, 1 )
color_ramp = SubResource( 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 124.324, 85 )

[node name="MainVial" type="KinematicBody2D"]
position = Vector2( 549.213, 1920.86 )
collision_layer = 8
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5.21301, -119.79 )
scale = Vector2( 0.425554, 0.425957 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 2.78699, -23.79 )
polygon = PoolVector2Array( -168, -272, -168, 128, 152, 128, 152, -272, 128, -272, 128, 104, -144, 104, -144, -272 )

[node name="EnterArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 24
space_override = 3
gravity = 700.0
linear_damp = 9.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterArea"]
position = Vector2( -5.63226, -105.982 )
shape = SubResource( 1 )

[node name="ExitArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 24
space_override = 3
gravity = 704.0
linear_damp = 9.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
position = Vector2( -5.21301, -100.86 )
shape = SubResource( 7 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -165.213, -320.86 )
scale = Vector2( 7.92793, 10.5515 )
shape = SubResource( 2 )

[node name="MixTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MixParticles" type="Particles2D" parent="."]
position = Vector2( -6.75391, -112.86 )
emitting = false
amount = 80
one_shot = true
process_material = SubResource( 3 )

[node name="SpillGuard" type="CollisionShape2D" parent="."]
position = Vector2( -5.21295, -355.86 )
rotation = 3.14159
scale = Vector2( 1.48, 1 )
shape = SubResource( 6 )
one_way_collision = true

[node name="RepositionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RepositionTween" type="Tween" parent="."]

[connection signal="body_entered" from="EnterArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="ExitArea" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="timeout" from="MixTimer" to="." method="_on_MixTimer_timeout"]
[connection signal="timeout" from="RepositionTimer" to="." method="_on_RepositionTimer_timeout"]
